[package]
name = "mongodb-database-connector"
version = "0.1.0"
edition = "2021"
publish = ["artifactory"]
authors = ["Oliver Bannister"]

[dependencies]
async-trait = { version = "0.1.72" }
mongodb = { version = "2.6.0" }
bson = { version = "2.6.1" }
serde = { version = "1" }
tokio = { version = "1" }

[dev-dependencies]
run_script = { version = "0.10.1" }
testcontainers = { version = "0.15.0" }